# logic-gate

./: .gitignore  pyproject.toml
src/: main.py
